<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/parkinglot"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#A4090909">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/brand"
            app:srcCompat="@drawable/ic_baseline_local_parking_24"
            app:tint="#FFFFFF" />

        <TextView
            android:id="@+id/parkinglot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginTop="10dp"
            android:fontFamily="serif"
            android:text="@string/parking_lot"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="55sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/parkinglot"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/border"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:lines="1"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:lines="1"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            tools:ignore="TextFields" />

        <RadioGroup
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:text="@string/admin"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/employee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/employeerbt"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RadioGroup>

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btnregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnlogin"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="13sp" />

        <Button
            android:id="@+id/forgotpassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/btnregister"
            android:layout_marginTop="10dp"
            android:background="@drawable/none_color"
            android:onClick="forgotpass"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="13sp" />

    </RelativeLayout>
</RelativeLayout>